--- a/admin/views/main.ejs
+++ b/admin/views/main.ejs
@@ -151,7 +151,7 @@
                 <span  class="row_text number">01022389960</span>
                 <span  class="row_text sex">남성</span>
                 <span  class="row_text std">0</span>
-                <span  class="row_text prog">데콜테</span>
+                <span  class="row_text prog">얼굴&데콜테관리(60min)</span>
                 <span  class="row_text count">2/3회</span>
                 <span  class="row_text note">없음</span>
                 <span  class="row_text date">09.26.18:30</span>
