--- a/admin/views/prog_manage.ejs
+++ b/admin/views/prog_manage.ejs
@@ -47,52 +47,48 @@
           </div>
         </div>
         <div class="header">
-          <span class="header_text">Lemon Tree</span>        
+          <span class="header_text">Lemon Tree</span>
+          <div class="manage_box">
+            <div class="management_date">운영날짜 관리</div>
+            <div class="prog_add">프로그램 추가</div>
+          </div>        
         </div>
         <div class="menu_bar">
           <div class="main_page"><a href="/" class="menu_text">메인</a></div>
           <div class="client_list"><a href="/client_list" class="menu_text">회원목록</a></div>
-          <div class="reserv_manage"><a href="/reservation_manage" class="menu_text focus">예약관리</a></div>
-          <div class="prog_manage"><a href="/prog_manage" class="menu_text">프로그램관리</a></div>
+          <div class="reserv_manage"><a href="/reservation_manage" class="menu_text">예약관리</a></div>
+          <div class="prog_manage"><a href="/prog_manage" class="menu_text focus">프로그램관리</a></div>
         </div>
         <div class="main">
           <div class="table">
             <div class="table_content a">
                 <div class="table_title">
                     <span class="table_title_text">프로그램 관리</span>
+                    <div class="manage_box">
+                      <div class="management_date">운영날짜 관리</div>
+                      <div class="prog_add">프로그램 추가</div>
+                    </div>
                 </div>
-                <div class="row_top">
-                    <span  class="row_text name">이름</span>
-                    <span  class="row_text number">휴대폰 번호</span>
-                    <span  class="row_text sex">성별</span>
-                    <span  class="row_text std">재학생</span>
+                <div class="row_top prog">
                     <span  class="row_text prog">프로그램</span>
                     <span  class="row_text count">횟수</span>
-                    <span  class="row_text note">비고</span>
-                    <span  class="row_text date">예약 날짜</span>
-                    <span  class="row_text time">시간</span>
+                    <span  class="row_text price">정상가</span>
+                    <span  class="row_text discount">할인가</span>
+                    <div class="del_btn"><span  class="row_text del"></span></div>
                 </div>
-                <div class="row a">
-                    <span  class="row_text name"></span>
-                    <span  class="row_text number"></span>
-                    <span  class="row_text sex"></span>
-                    <span  class="row_text std"></span>
+                <div class="row a prog">
+                    <span  class="row_text prog">얼굴&데콜테관리(60min)</span>
+                    <span  class="row_text count">1회</span>
+                    <span  class="row_text price">13,000</span>
+                    <span  class="row_text discount">11,000</span>
+                    <div class="del_btn"><span  class="row_text del">삭제</span></div>
+                </div>
+                <div class="row b prog">
                     <span  class="row_text prog"></span>
                     <span  class="row_text count"></span>
-                    <span  class="row_text note"></span>
-                    <span  class="row_text date"></span>
-                    <span  class="row_text time"></span>
-                </div>
-                <div class="row b">
-                    <span  class="row_text name"></span>
-                    <span  class="row_text number"></span>
-                    <span  class="row_text sex"></span>
-                    <span  class="row_text std"></span>
-                    <span  class="row_text prog"></span>
-                    <span  class="row_text count"></span>
-                    <span  class="row_text note"></span>
-                    <span  class="row_text date"></span>
-                    <span  class="row_text time"></span>
+                    <span  class="row_text price"></span>
+                    <span  class="row_text discount"></span>
+                    <div class="del_btn"><span  class="row_text del">삭제</span></div>
                 </div>
             </div>
           </div>
