--- a/admin/views/reservation_manage.ejs
+++ b/admin/views/reservation_manage.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>예약 관리</title>
     <link rel="stylesheet" type="text/css" href="/styles.css">
+    <script src="/script.js"></script>
 </head>
 <body>
     <div class="manage_main">
@@ -110,5 +111,9 @@
           </div>
         </div>
     </div>
+    <script>
+
+
+    </script>
 </body>
 </html>
