--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -7,9 +7,13 @@ a{
   text-decoration-line: none;
 }
 input[type="text"] {
-  border: none; /* 테두리 없애기 */
+  border: none;
   border-radius: 20px;
   outline: none;
+}
+textarea{
+  border: none;
+  resize: none;
 }
 .table_content{
   display: flex;
@@ -17,7 +21,6 @@ input[type="text"] {
   align-items: center;
   flex: 1 0 0;
   align-self: stretch;
-
 }
 .row_top{
   display: flex;
@@ -345,6 +348,173 @@ input[type="text"] {
         line-height: 140%; /* 28px */
         text-transform: capitalize;
         cursor: pointer;
+      }
+      .modal_back{
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* 반투명한 배경 색상 */
+        z-index: 1; /* 모달보다 아래에 위치하도록 설정 */
+      }
+      .modal{
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        z-index: 2; /* 모달 배경 위에 위치하도록 설정 */
+        /* 나머지 모달 스타일링 */
+      }
+      .detail_info_modal{
+        display: flex;
+        width: 900px;
+        height: 600px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      .modal_header{
+        display: flex;
+        height: 50px;
+        min-width: 600px;
+        padding-left: 0px;
+        justify-content: space-between;
+        align-items: center;
+        flex-shrink: 0;
+        align-self: stretch;
+        background: #848383;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      }
+      .modal_header_title{
+        display: flex;
+        width: 140px;
+        flex-direction: column;
+        justify-content: center;
+        align-self: stretch;
+        color: #FFF;
+        text-align: center;
+        font-family: DM Sans;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        letter-spacing: -0.165px;
+      }
+      .confirm_btn_text{
+        color: #FFF;
+        font-size: 20px;
+        display: flex;
+        width: 60px;
+        padding: 10px 0px;
+        justify-content: center;
+        align-items: center;
+        align-self: stretch;
+        background: #515151;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      }
+      .modal_main{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 1 0 0;
+        align-self: stretch;
+      }
+      .info{
+        display: flex;
+        min-width: 300px;
+        max-width: 450px;
+        padding: 40px 25px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+        flex: 1 0 0;
+        align-self: stretch;
+      }
+      .info_title{
+        color: #000;
+        text-align: center;
+        font-family: DM Sans;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: -0.165px;
+      }
+      .info_box{
+        display: flex;
+        min-height: 20px;
+        max-height: 60px;
+        align-items: center;
+        gap: 10px;
+        flex: 1 0 0;
+        align-self: stretch;
+        border: 1px solid #D9D9D9;
+        color: #FFF;
+      }
+      .info_box.note{
+        gap: 0;
+        max-height: 150px;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .info_box.fare{
+        display: flex;
+        max-height: 120px;
+        flex-direction: column;
+        justify-content: center;
+        gap: 0;
+      }
+      .fare_content{
+        display: flex;
+        align-items: center;
+        align-self: stretch;
+        height: 30px;
+         
+      }
+      .box_name{
+        display: flex;
+        background: #B5B5B5;
+        height: 60px;
+        width: 60px;
+        justify-content: center;
+        align-items: center;
+        font-size: 15px;
+        font-weight: 700;
+      }
+      .fare_content .fare_box{
+        display: flex;
+        font-size: 10px;
+        background: #B5B5B5;
+        height: 30px;
+        align-items: center;
+        width: 60px;
+        justify-content: center;
+      }
+      .info_box.note .box_name{
+        height: 20px;
+        width: 400px;
+        font-size: 13px;      
+      }
+      .inputbox.note{
+        width: 395px;
+        height: 125px;
+        vertical-align: top;
+      }
+      .modal_footer{
+        display: flex;
+        min-width: 600px;
+        max-width: 900px;
+        height: 40px;
+        padding: 5px 9px;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 8px;
+        align-self: stretch;
+        background: #E9EAEC;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       }
   }
   /*-----------------------------PC end------------------------------*/
