--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -8,12 +8,12 @@ a{
 }
 input[type="text"] {
   border: none;
-  border-radius: 20px;
   outline: none;
 }
 textarea{
   border: none;
   resize: none;
+  outline: none;
 }
 .table_content{
   display: flex;
@@ -142,6 +142,7 @@ textarea{
       }
       .table_title{
         display: flex;
+        height: 50px;
         padding: 10px 10px;
         align-items: center;
         align-self: stretch;
@@ -166,7 +167,7 @@ textarea{
         border-radius: 8px;
         border: 1px solid var(--gray-300, #D0D5DD);
       }
-      #searchInput{
+      .searchInput{
         display: flex;
         align-items: center;
         gap: 8px;
@@ -243,21 +244,6 @@ textarea{
         flex: 1 0 0;
         text-align: center;
       }
-      .del_btn{
-        display: flex;
-        height: 30px;
-        max-width: 40px;
-        padding: 1px 9px;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        flex: 1 0 0;
-      }
-      .row .del_btn{
-        border-radius: 5px;
-        background: #EE4C69;
-        cursor: pointer;
-      }
       .row_top.prog .count,
       .row.prog .count{
         max-width: 75px;
@@ -328,13 +314,61 @@ textarea{
       .row_top.prog, .row.a.prog, .row.b.prog{
         gap: 100px;
       }
+      .btn_box{
+        display: flex;
+        padding: 5px 20px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        cursor: pointer;
+        width: 140px;
+      }
+      .row_top .row_text.del,
+      .row_top .row_text.modify{
+        background: #FFFED8;
+        display: flex;
+        padding: 1px 9px;
+        align-items: center;
+        height: 20px;
+        width: 30px;
+      }
+      .row_text.del,
+      .row_text.modify{
+        display: flex;
+        padding: 1px 9px;
+        align-items: center;
+        height: 20px;
+        width: 30px;
+        justify-content: center;
+        border-radius: 5px;
+        color: #FFF;
+      }
+      .row_text.del{
+        background: #EE4C69;       
+      }
+      .row_text.modify{
+        background: #5A6FC9;
+      }
       .manage_box{
         display: flex;
         align-items: center;
         gap: 20px;
         align-self: stretch;
       }
-      .management_date, .prog_add{
+      .date_container{
+        display: none;
+      }
+      .management_date_box{
+        display: flex;
+        padding: 0px 10px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        border: 3px solid #9A9A9A;
+        background: #FFF;
+      }
+      .management_date,.prog_add{
         display: flex;
         padding: 1px 9px;
         align-items: center;
@@ -368,7 +402,7 @@ textarea{
         z-index: 2; /* 모달 배경 위에 위치하도록 설정 */
         /* 나머지 모달 스타일링 */
       }
-      .detail_info_modal{
+      .info_modal{
         display: flex;
         width: 900px;
         height: 600px;
@@ -390,7 +424,7 @@ textarea{
       }
       .modal_header_title{
         display: flex;
-        width: 140px;
+        width: 200px;
         flex-direction: column;
         justify-content: center;
         align-self: stretch;
@@ -414,6 +448,7 @@ textarea{
         align-self: stretch;
         background: #515151;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        cursor: pointer;
       }
       .modal_main{
         display: flex;
@@ -471,8 +506,7 @@ textarea{
         display: flex;
         align-items: center;
         align-self: stretch;
-        height: 30px;
-         
+        height: 30px; 
       }
       .box_name{
         display: flex;
@@ -483,6 +517,10 @@ textarea{
         align-items: center;
         font-size: 15px;
         font-weight: 700;
+      }
+      .box_name.prog{
+        height: 20px;
+        width: 70px;
       }
       .fare_content .fare_box{
         display: flex;
@@ -497,6 +535,9 @@ textarea{
         height: 20px;
         width: 400px;
         font-size: 13px;      
+      }
+      .inputbox{
+        width: 300px;
       }
       .inputbox.note{
         width: 395px;
@@ -515,6 +556,24 @@ textarea{
         align-self: stretch;
         background: #E9EAEC;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      }
+      .btn{
+        display: flex;
+        padding: 5px 20px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        color: #FFF;
+        cursor: pointer;
+      }
+      .btn.modify, .btn.check{
+        background: #5A6FC9;
+      }
+      .btn.pay{
+        background: #4CEE66;
+      }
+      .btn.cancel{
+        background: #EE4C69;
       }
   }
   /*-----------------------------PC end------------------------------*/
@@ -568,7 +627,7 @@ textarea{
       border: 1px solid var(--gray-300, #D0D5DD);
       background-color: #fff;
     }
-    #searchInput{
+    .searchInput{
       display: flex;
       align-items: center;
       gap: 8px;
@@ -684,20 +743,40 @@ textarea{
       flex: 1 0 0;
       text-align: center;
     }
-    .del_btn{
+    .btn_box{
       display: flex;
-      height: 30px;
-      max-width: 40px;
-      padding: 1px 9px;
+      padding: 5px 20px;
       justify-content: center;
       align-items: center;
       gap: 10px;
-      flex: 1 0 0;
-    }
-    .row .del_btn{
-      border-radius: 5px;
-      background: #EE4C69;
+      color: #FFF;
       cursor: pointer;
+      width: 140px;
+    }
+    .row_top .row_text.del,
+    .row_top .row_text.modify{
+      background: #FFFED8;
+      display: flex;
+      padding: 1px 9px;
+      align-items: center;
+      height: 20px;
+      width: 30px;
+    }
+    .row_text.del,
+    .row_text.modify{
+      display: flex;
+      padding: 1px 9px;
+      align-items: center;
+      height: 20px;
+      width: 30px;
+      justify-content: center;
+      border-radius: 5px;
+    }
+    .row_text.del{
+      background: #EE4C69;       
+    }
+    .row_text.modify{
+      background: #5A6FC9;
     }
     .row_top.prog .count,
     .row.prog .count{
@@ -751,20 +830,196 @@ textarea{
       gap: 20px;
       align-self: stretch;
     }
-    .management_date, .prog_add{
+    .modal_back{
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5); /* 반투명한 배경 색상 */
+      z-index: 1; /* 모달보다 아래에 위치하도록 설정 */
+    }
+    .modal{
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: white;
+      z-index: 2; /* 모달 배경 위에 위치하도록 설정 */
+      /* 나머지 모달 스타일링 */
+    }
+    .info_modal{
       display: flex;
-      padding: 1px 9px;
+      width: 600px;
+      height: 600px;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      gap: 10px;
-      border-radius: 5px;
+    }
+    .modal_header{
+      display: flex;
+      height: 50px;
+      min-width: 600px;
+      padding-left: 0px;
+      justify-content: space-between;
+      align-items: center;
+      flex-shrink: 0;
+      align-self: stretch;
       background: #848383;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    }
+    .modal_header_title{
+      display: flex;
+      width: 200px;
+      flex-direction: column;
+      justify-content: center;
+      align-self: stretch;
       color: #FFF;
-      font-size: 15px;
+      text-align: center;
+      font-family: DM Sans;
+      font-size: 20px;
       font-style: normal;
       font-weight: 500;
-      line-height: 140%; /* 28px */
-      text-transform: capitalize;
+      line-height: normal;
+      letter-spacing: -0.165px;
+    }
+    .confirm_btn_text{
+      color: #FFF;
+      font-size: 20px;
+      display: flex;
+      width: 60px;
+      padding: 10px 0px;
+      justify-content: center;
+      align-items: center;
+      align-self: stretch;
+      background: #515151;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       cursor: pointer;
+    }
+    .modal_main{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      flex: 1 0 0;
+      align-self: stretch;
+    }
+    .info{
+      display: flex;
+      min-width: 300px;
+      max-width: 600px;
+      padding: 10px 25px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 5px;
+      flex: 1 0 0;
+      align-self: stretch;
+    }
+    .info_title{
+      color: #000;
+      text-align: center;
+      font-family: DM Sans;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      letter-spacing: -0.165px;
+    }
+    .info_box{
+      display: flex;
+      min-height: 20px;
+      max-height: 30px;
+      align-items: center;
+      gap: 10px;
+      flex: 1 0 0;
+      align-self: stretch;
+      border: 1px solid #D9D9D9;
+      color: #FFF;
+    }
+    .info_box.note{
+      gap: 0;
+      max-height: 150px;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .info_box.fare{
+      display: flex;
+      max-height: 100px;
+      flex-direction: column;
+      justify-content: center;
+      gap: 0;
+    }
+    .fare_content{
+      display: flex;
+      align-items: center;
+      align-self: stretch;
+      height: 25px; 
+    }
+    .box_name{
+      display: flex;
+      background: #B5B5B5;
+      height: 30px;
+      width: 50px;
+      justify-content: center;
+      align-items: center;
+      font-size: 10px;
+      font-weight: 700;
+    }
+    .box_name.prog{
+      height: 20px;
+      width: 70px;
+    }
+    .fare_content .fare_box{
+      display: flex;
+      font-size: 10px;
+      background: #B5B5B5;
+      height: 25px;
+      align-items: center;
+      width: 50px;
+      justify-content: center;
+    }
+    .info_box.note .box_name{
+      height: 20px;
+      width: 550px;
+      font-size: 13px;      
+    }
+    .inputbox{
+      width: 500px;
+    }
+    .inputbox.note{
+      width: 540px;
+      height: 125px;
+      vertical-align: top;
+    }
+    .modal_footer{
+      display: flex;
+      height: 40px;
+      padding: 5px 9px;
+      justify-content: flex-end;
+      align-items: center;
+      gap: 8px;
+      align-self: stretch;
+      background: #E9EAEC;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    }
+    .btn{
+      display: flex;
+      padding: 5px 20px;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      color: #FFF;
+      cursor: pointer;
+    }
+    .btn.modify, .btn.check{
+      background: #5A6FC9;
+    }
+    .btn.pay{
+      background: #4CEE66;
+    }
+    .btn.cancel{
+      background: #EE4C69;
     }
   }
   /*-----------------------------테블릿 end------------------------------*/
