--- a/admin/views/reservation_manage.ejs
+++ b/admin/views/reservation_manage.ejs
@@ -54,7 +54,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                 <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <input type="text" placeholder="이름 또는 번호 검색" id="searchInput">
+            <input type="text" placeholder="이름 또는 번호 검색" class="searchInput">
         </div>        
         </div>
         <div class="menu_bar">
@@ -72,7 +72,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                        <input type="text" placeholder="이름 또는 번호 검색" id="searchInput">
+                        <input type="text" placeholder="이름 또는 번호 검색" class="searchInput">
                     </div>
                 </div>
                 <div class="row_top">
@@ -112,10 +112,11 @@
           </div>
         </div>
     </div>
+    <!--모달-->
     <div class="modal_back">
       <div class="modal">
         <form method="POST" class="reservationForm">
-        <div class="detail_info_modal">
+        <div class="detail info_modal">
           <div class="modal_header">
             <span class="modal_header_title">예약 상세정보</span>
             <div class="confirm_btn" data-action="">
@@ -127,15 +128,15 @@
               <span class="client info_title">예약자 정보</span>
               <div class="info_box name">
                 <span class="box_name">이름</span>
-                <input type="text" name="" class="inputbox">
+                <input type="text" name="" class="inputbox name">
               </div>
               <div class="info_box number">
                 <span class="box_name">번호</span>
-                <input type="text" name="" class="inputbox">
+                <input type="text" name="" class="inputbox number">
               </div>
               <div class="info_box sex">
                 <span class="box_name">성별</span>
-                <input type="text" name="" class="inputbox">
+                <input type="text" name="" class="inputbox sex">
               </div>
               <div class="info_box note">
                 <span class="box_name">비고</span>
@@ -146,19 +147,21 @@
               <span class="reserv info_title">예약 정보</span>
               <div class="info_box date">
                 <span class="box_name">예약날짜</span>
-                <input type="text" name="" class="inputbox">
+                <input type="text" name="" class="inputbox date">
               </div>
               <div class="info_box prog">
                 <span class="box_name">프로그램</span>
-                <input type="text" name="" class="inputbox">
+                <input type="text" name="" class="inputbox prog">
               </div>
               <span class="fare info_title">요금 정보</span>
               <div class="info_box fare">
                 <div class="fare_content">
                   <span class="fare_box">횟수</span>
+                  <input type="text" name="" class="inputbox count" readonly>
                 </div>
                 <div class="fare_content">
                   <span class="fare_box">재학생</span>
+                  <input type="text" name="" class="inputbox std">
                 </div>
                 <div class="fare_content">
                   <span class="fare_box">정상가</span>
@@ -170,12 +173,15 @@
             </div>
           </div>
           <div class="modal_footer">
-            
+            <span class="btn modify" data-action="">수정</span>
+            <span class="btn pay" data-action="">결제</span>
+            <span class="btn cancel" data-action="">예약 취소</span>
           </div>
         </div>
       </form>
       </div>
     </div>
-    <script src="/script.js"></script>
+    <!--모달-->
+    <script src="/reserv_manage_script.js"></script>
 </body>
 </html>
